--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     -->
     <title>JM Pokemon App</title>
   </head>
-  <body style="overflow: hidden;">
+  <body style="overflow-y: hidden; background: F4F4F4;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
